--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati expedita necessitatibus 
         eos quam accusantium quis ullam ipsa nulla. Eius unde dicta aut libero cumque provident officiis
          doloribus necessitatibus cum aliquam?</p>
+    <img src="ImgLenny/10013.jpg" alt="width=10%">
+    <img src="ImgLenny/12161.jpg" alt="width=10%">
 </body>
 </html>
